# GenAI-TermuxCore

./: .replit  app.py  main.py  models.py  nexus_termux.py  pyproject.toml  replit.md  termux_listener.py  termux_server.py
brain/: memory.json
core/: brain.py  engine.py  monitor.py
modules/: remote.py  tools.py
templates/: index.html
utils/: loader.py
